# Eggr

./: README.md  pyproject.toml  setup.py
eggr/: __init__.py  eggr.py
