[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eggr"
version = "1.0.1"
description = "A Python package that extracts the longest reachable increasing sequence from a list of numbers where each step cannot exceed a specified distance."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Egglord" }
]
license = { text = "MIT" }
